# gil

./: .appveyor.yml  .travis.yml  CMakeLists.txt  azure-pipelines.yml
.ci/: build-and-test.sh
.ci/azure-pipelines/: steps-cmake-build-and-test.yml  steps-install-boost.yml
.circleci/: config.yml
doc/: conf.py  design_guide.rst  index.rst  requirements.txt  tutorial.rst
test/: unit_test.hpp
test/core/image/: CMakeLists.txt  Jamfile
test/core/image/checksum/: README.md
test/image/: CMakeLists.txt  Jamfile
test/image/checksum/: CMakeLists.txt  Jamfile  calculate.cpp  generate.cpp  reference_checksums.txt  test_fixture.hpp
test/legacy/: gil_reference_checksums-boostcrc32-release.txt  gil_reference_checksums-internalcrc32-release.txt  gil_reference_checksums-zlibcrc32-release.txt  image.cpp
